<resources>
    <string name="app_name">侨华开门</string>
    <string name="text_home">主页</string>
    <string name="text_intelligent_home">智能家居</string>
    <string name="text_user_setting">用户设置</string>
    <string name="text_setting">设置</string>
    <string name="text_system_setting">系统设置</string>
    <string name="text_entertainment">娱乐天地</string>
    <string name="text_visual_intercom">可视对讲</string>
    <string name="text_home_sercurity">家庭安防</string>
    <string name="text_cloud_intercom">云对讲</string>
    <string name="text_ring">响铃</string>
    <string name="text_open">开</string>
    <string name="open">打开</string>
    <string name="text_close">关</string>
    <string name="text_one_key_set_defence">一键布防</string>
    <string name="text_one_key_cancel_defence">一键撤防</string>
    <string name="text_building_monitor">楼栋监控</string>
    <string name="text_house_mode">家居模式</string>
    <string name="text_SMS">短信</string>
    <string name="text_call_record">通话记录</string>
    <string name="text_call_elevator">一键呼梯</string>
    <string name="text_user_intercom">户户通话</string>
    <string name="text_leave_message_or_video">留影留言</string>
    <string name="restore_netcfg">还原默认房号</string>
    <string name="filter_large_size_music_file">已经过滤掉超出程序支持的文件大小</string>
    <string name="tips_netcfg_update">请重新检查设置，网络配置表已更新为:</string>
    <string name="submit">确定</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="user_login">用户登录</string>
    <string name="server_login">服务器设置</string>
    <string name="cloud_talk_setting">云对讲设置</string>
    <string name="cloud_login_status">云对讲登录:</string>
    <string name="cloud_network_faile">网络连接失败,请先检查网络</string>
    <string name="cloud_is_register">云对讲已注册成功,请登录\u2026\u2026\u2026</string>
    <string name="cloud_is_logined">云对讲已登录成功</string>
    <string name="cloud_login_restar">云对讲正在登录,请稍后\u2026\u2026\u2026</string>
    <string name="cloud_login_success">成功</string>
    <string name="cloud_login_failed">失败</string>
    <string name="cloud_status_tip">请先设置房号信息！</string>
    <string name="cloud_status_tip_regist">请点击云对讲注册！</string>
    <string name="bind_device_is_max">最多绑定手机数量：</string>
    <string name="bind_device_is_exist">该设备已绑定</string>
    <string name="bind_device">绑定设备</string>
    <string name="unbind_device">设备管理</string>
    <string name="call_forwarding">呼叫转移</string>
    <string name="call_forwarding_tips">当门口机呼叫本机时，同时呼叫手机端</string>
    <string name="call_not_forwarding">呼叫不转移</string>
    <string name="call_not_forwarding_tips">当门口机呼叫本机时，不呼叫手机端</string>
    <string name="bind_device_type">设备类型</string>
    <string name="bind_device_isonline">是否被屏蔽</string>
    <string name="bind_device_on">否</string>
    <string name="bind_device_off">是</string>
    <string name="bind_device_all">手机绑定</string>
    <string name="bind_device_and">门磁绑定</string>
    <string name="bind_device_ios">其他绑定</string>
    <string name="phone_type_and">安卓</string>
    <string name="phone_type_ios">苹果</string>
    <string name="devices_type_phone">移动设备</string>
    <string name="devices_type_card">门磁卡片</string>
    <string name="unbind_all_devices">全部解绑</string>
    <string name="unbind_phone_device">解绑</string>
    <string name="unbind_phone_device_success">解绑成功</string>
    <string name="force_unbind_phone_device_success">强制解绑成功</string>
    <string name="unbind_phone_device_faile">解绑失败，账号没上线！</string>
    <string name="delete_all_devices">解绑全部绑定设备</string>
    <string name="delete_and_devices">解绑全部安卓绑定设备</string>
    <string name="delete_ios_devices">解绑全部苹果绑定设备</string>
    <string name="password_error">密码错误</string>
    <string name="telphone_bind">手机绑定</string>
    <string name="user_name">账号</string>
    <string name="password">密码</string>
    <string name="user_register">用户注册</string>
    <string name="change_password">修改密码</string>
    <string name="text_room_num_set">房号设置</string>
    <string name="text_screen_calibration">屏幕校准</string>
    <string name="text_wallpaper">壁纸设置</string>
    <string name="text_time_setting">时间设置</string>
    <string name="text_unlock_password">开锁密码</string>
    <string name="text_light">屏幕设置</string>
    <string name="text_ring_set">铃声设置</string>
    <string name="text_leave_message_set">留言设置</string>
    <string name="is_loading">正在加载</string>
    <string name="refresh">刷新</string>
    <string name="text_language_set">语言设置</string>
    <string name="text_villa_extension_set">别墅机设置</string>
    <string name="text_unlock_set">开锁设置</string>
    <string name="text_defence_area_set">防区设置</string>
    <string name="text_project_password_set">工程密码</string>
    <string name="text_system_reset">系统复位</string>
    <string name="set_roomcode_success">房号设置成功</string>
    <string name="set_roomcode_fail">房号设置失败，请重试</string>
    <string name="set_roomcode_hint_00">00</string>
    <string name="set_roomcode_hint_0000">0000</string>
    <string name="roomcode_exist">该房号已存在</string>
    <string name="input_13_length_roomcode">请输入16位房号！</string>
    <string name="back">返回</string>
    <string name="is_monitoring">正在监视：</string>
    <string name="number_hao">号</string>
    <string name="target_off_line">无法连接该设备，请检查目标设备是否连接</string>
    <string name="num_unit_gate_phone">号门口机</string>
    <string name="num_unit_gate_one">1号门口机</string>
    <string name="num_unit_gate_two">2号门口机</string>
    <string name="num_unit_gate_three">3号门口机</string>
    <string name="gate_phone">门口机</string>
    <string name="security_extension">保安分机</string>
    <string name="manger_center">管理中心</string>
    <string name="num_manger_center">号管理中心</string>
    <string name="villa_gate">别墅门口机</string>
    <string name="main_gate">大门口机</string>
    <string name="unknow_type">未知类型</string>
    <string name="text_unlock">开锁</string>
    <string name="text_hang_up">挂断</string>
    <string name="text_answer_call">接听</string>
    <string name="text_open_video">打开本地视频</string>
    <string name="text_close_video">关闭本地视频</string>
    <string name="call_timeout">呼叫超时</string>
    <string name="call_end">通话结束</string>
    <string name="user_name_shouldnot_null">请键入用户名</string>
    <string name="password_shouldnot_null">请键入密码</string>
    <string name="tips_user_name_not_legal">用户名长度有误，请输入大于六位且小于16位的用户名</string>
    <string name="tips_user_password_not_legal">密码长度有误，请输入大于六位且小于16位的密码</string>
    <string name="password_not_same">两次密码不一致</string>
    <string name="please_select_entrance_machine">请选择门口机</string>
    <string name="login_success">登录成功</string>
    <string name="registering">正在注册</string>
    <string name="tip_yun_server_init">云对讲服务尚未启动，正尝试启动中，请稍后</string>
    <string name="register_success">注册成功</string>
    <string name="register_user_has_exist">用户名已存在</string>
    <string name="register_user_unknow">注册未知错误</string>
    <string name="register_fail">注册失败</string>
    <string name="lan_is_logout">内网已掉线</string>
    <string name="wan_is_logout">外网已经掉线</string>
    <string name="username_no_exist">用户名不存在</string>
    <string name="cloud_wan_change_password_success">修改公网账号密码成功</string>
    <string name="cloud_wan_change_password_1">修改公网账号密码返回结果1，请咨询嘉文</string>
    <string name="cloud_wan_change_password_2">修改公网账号密码返回结果2，请咨询嘉文</string>
    <string name="cloud_wan_change_password_3">修改公网账号密码返回结果3，请咨询嘉文</string>
    <string name="cloud_wan_change_password_4">修改公网账号密码返回结果4，请咨询嘉文</string>
    <string name="cloud_wan_change_password_10">修改公网账号密码返回结果-1，请咨询嘉文</string>
    <string name="cloud_wan_change_password_failed">修改公网账号密码失败</string>
    <string name="cloud_wan_retry_loading">外网登录失败，请重新登录</string>
    <string name="cloud_lan_retry_loading">內网登录失败，请重新登录</string>
    <string name="cloud_nat_error">网络穿透失败</string>
    <string name="cloud_inner_device_info_error">内网设备信息错误</string>
    <string name="cloud_outer_device_info_error">公网设备信息错误</string>
    <string name="cloud_username_forbid">账户已禁用</string>
    <string name="cloud_check_user_error">检测用户失败</string>
    <string name="cloud_serial_forbid">序列号不允许</string>
    <string name="cloud_inner_no_username">内网未检测到此用户</string>
    <string name="cloud_outer_no_username">外网未检测到此用户</string>
    <string name="cloud_inner_login_error">内网登录错误</string>
    <string name="cloud_inner_device_logined">内网设备已经登录，请勿重复登录</string>
    <string name="cloud_outer_device_logined">公网设备已经登录，请勿重复登录</string>
    <string name="cloud_no_server_address">无服务器地址</string>
    <string name="cloud_unlogin_success">退出登录成功</string>
    <string name="only_correct_user">使用账号和密码连接室内机终端</string>
    <string name="only_serialnumber_conn">使用指定序列号的手机连接室内机终端</string>
    <string name="enable">(已启用)</string>
    <string name="disable">(未开启)</string>
    <string name="server_address">服务器地址</string>
    <string name="callin_transfer">当门口机呼入同步呼叫手机</string>
    <string name="mode_at_home">在家模式</string>
    <string name="mode_in_hight">夜间模式</string>
    <string name="mode_leave_home">离家模式</string>
    <string name="mode_out_of_security">撤防模式</string>
    <string name="security_record">安防日志</string>
    <string name="alarm_record">报警记录</string>
    <string name="mode_setting">模式设置</string>
    <string name="mode_in_bed">就寝模式</string>
    <string name="mode_dinner">就餐模式</string>
    <string name="mode_media">影视模式</string>
    <string name="smart_home_server_on">开启智能服务</string>
    <string name="smart_home_server_off">关闭智能服务</string>
    <string name="mode_entertainment">娱乐模式</string>
    <string name="mode_disable_all">全关模式</string>
    <string name="mode_start_third_app">启动应用</string>
    <string name="picture_show">相册浏览</string>
    <string name="music_enjoy">音乐欣赏</string>
    <string name="movie_enjoy">影视欣赏</string>
    <string name="text_recently_record">最近通话</string>
    <string name="text_area_no">小区</string>
    <string name="text_area">区</string>
    <string name="text_building">栋</string>
    <string name="text_unit">单元</string>
    <string name="text_room">室</string>
    <string name="text_extension">分机</string>
    <string name="num_extension">号分机</string>
    <string name="call_immediately">立即呼叫</string>
    <string name="call_make">呼叫</string>
    <string name="be_cutoff">对方挂断</string>
    <string name="be_accept">对方接听</string>
    <string name="room_code_not_exist">该房号不存在</string>
    <string name="cannot_call_self">不能呼叫本地房号</string>
    <string name="call_error">呼叫错误</string>
    <string name="please_input_correct">请输入完整的房号</string>
    <string name="screen_set">屏保设置</string>
    <string name="text_system_info">系统信息</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="dot">.</string>
    <string name="special_symbol">123?</string>
    <string name="letter_q">q</string>
    <string name="letter_w">w</string>
    <string name="letter_e">e</string>
    <string name="letter_r">r</string>
    <string name="letter_t">t</string>
    <string name="letter_y">y</string>
    <string name="letter_u">u</string>
    <string name="letter_i">i</string>
    <string name="letter_o">o</string>
    <string name="letter_p">p</string>
    <string name="letter_a">a</string>
    <string name="letter_s">s</string>
    <string name="letter_d">d</string>
    <string name="letter_f">f</string>
    <string name="letter_g">g</string>
    <string name="letter_h">h</string>
    <string name="letter_j">j</string>
    <string name="letter_k">k</string>
    <string name="letter_l">l</string>
    <string name="letter_z">z</string>
    <string name="letter_x">x</string>
    <string name="letter_c">c</string>
    <string name="letter_v">v</string>
    <string name="letter_b">b</string>
    <string name="letter_n">n</string>
    <string name="letter_m">m</string>
</resources>