<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/key_1"
            style="@style/style_keyboard_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/number_1" />

        <Button
            android:id="@+id/key_2"
            style="@style/style_keyboard_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:text="@string/number_2" />

        <Button
            android:id="@+id/key_3"
            style="@style/style_keyboard_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:text="@string/number_3" />

        <Button
            android:id="@+id/key_4"
            style="@style/style_keyboard_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:text="@string/number_4" />

        <Button
            android:id="@+id/key_5"
            style="@style/style_keyboard_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:text="@string/number_5" />

        <Button
            android:id="@+id/key_del"
            style="@style/style_keyboard_number"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:layout_marginLeft="2dp"
			android:text="@string/delete"/>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/key_6"
            style="@style/style_keyboard_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/number_6" />

        <Button
            android:id="@+id/key_7"
            style="@style/style_keyboard_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:text="@string/number_7" />

        <Button
            android:id="@+id/key_8"
            style="@style/style_keyboard_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:text="@string/number_8" />

        <Button
            android:id="@+id/key_9"
            style="@style/style_keyboard_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:text="@string/number_9" />

        <Button
            android:id="@+id/key_0"
            style="@style/style_keyboard_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:text="@string/number_0" />

        <Button
            android:id="@+id/key_dot"
            style="@style/style_keyboard_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:text="@string/dot" />
        
    </LinearLayout>
</LinearLayout>